R2DBC Spring Query DSL

--- a/spring-webflux-essentials/src/main/resources/application.yml
+++ b/spring-webflux-essentials/src/main/resources/application.yml
@@ -3,3 +3,10 @@ spring:
     url: r2dbc:postgresql://localhost:5433/postgres?schema=anime
     username: root
     password: root
+
+logging:
+  level:
+    org:
+      springframework:
+        data:
+          r2dbc: DEBUG
