--- a/spring-webflux-essentials/src/main/resources/application.yml
+++ b/spring-webflux-essentials/src/main/resources/application.yml
@@ -11,6 +11,6 @@ logging:
         data:
           r2dbc: DEBUG
 
-server:
-  error:
-    include-stacktrace: on_param
+#server:
+#  error:
+#    include-stacktrace: on_param
