R2DBC Transactions Integration Tests

--- a/spring-webflux-essentials/src/test/resources/application.yml
+++ b/spring-webflux-essentials/src/test/resources/application.yml
@@ -1,6 +1,12 @@
+spring:
+  r2dbc:
+    url: r2dbc:postgresql://localhost:5433/postgres?schema=anime
+    username: root
+    password: root
+
 logging:
   level:
     org:
       springframework:
         data:
-          r2dbc: DEBUG
+          r2dbc: INFO
